# namera

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build-windows-portable.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  app.test.ts  main.ts  styles.css  tauri.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/namera-config/: Cargo.toml
crates/namera-config/src/: lib.rs
crates/namera-core/: Cargo.toml
crates/namera-core/src/: media.rs
crates/namera-exec/: Cargo.toml
crates/namera-exec/src/: lib.rs
crates/namera-exec/tests/: batch.rs
crates/namera-match/: Cargo.toml
crates/namera-match/src/: lib.rs
crates/namera-match/tests/: ranking.rs
crates/namera-parse/: Cargo.toml
crates/namera-parse/fixtures/: filenames.txt
crates/namera-parse/src/: lib.rs
crates/namera-parse/tests/: normalize.rs
crates/namera-plan/: Cargo.toml
crates/namera-plan/src/: lib.rs
crates/namera-plan/tests/: plans.rs
docs/: ARCHITECTURE.md  BACKLOG.md  MILESTONES.md  NAMES.md  REPO-STRUCTURE.md  STATUS.md
scripts/: bootstrap.sh  build-portable.mjs
state/tasks/: namera-phase3-push.events.jsonl  namera-phase3-push.json
