[workspace]
members = [
  "crates/namera-core",
  "crates/namera-parse",
  "crates/namera-match",
  "crates/namera-plan",
  "crates/namera-exec",
  "crates/namera-config",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["John Watson and contributors"]
repository = "https://namera.org"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
